objects/Team_MIS_Report_Post_Sale__c/Team_MIS_Report_Post_Sale__c.object-meta.xml
<CustomObject>
    <description>Cluster 1 Sprint 9 CTP - 98 To create the analytical snapshot of reports</description>
    <label>Team MIS Report Post Sale</label>
    <nameField>
        <label>Team MIS Report Post Sale Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Team MIS Report Post Sales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>