objects/Team_MIS_Report_Post_Sale__c/fields/Call_Type__c.field-meta.xml
<CustomField>
    <fullName>Call_Type__c</fullName>
    <label>Call Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>