objects/Team_MIS_Report_Post_Sale__c/fields/Carried_Forward_Cases__c.field-meta.xml
<CustomField>
    <fullName>Carried_Forward_Cases__c</fullName>
    <label>Carried Forward Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>