objects/Team_MIS_Report_Post_Sale__c/fields/ReportName__c.field-meta.xml
<CustomField>
    <fullName>ReportName__c</fullName>
    <label>ReportName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>