objects/Team_MIS_Report_Post_Sale__c/fields/Total_Number_of_Cases__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Cases__c</fullName>
    <label>Total Number of Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>